--- a/src/styles.scss
+++ b/src/styles.scss
@@ -157,3 +157,10 @@ input.invalid:focus {
   color: #df2121;
   text-decoration: underline;
 }
+
+span.invalid {
+  font-size: .7em;
+  padding-left: 2em;
+  padding-top: .5em;
+  position: absolute;
+}
