--- a/src/app/sistema/usuarios-sistema/criar-usuario-sistema/criar-usuario-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/criar-usuario-sistema/criar-usuario-sistema.component.html
@@ -32,7 +32,7 @@
 
                     <!-- Nome -->
                     <div class="col-4 px-2 pt-4 p-0 m-0">
-                        <input formControlName="name" [class.invalid]="name?.invalid && (name?.dirty || name?.touched)" class="invalid form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
+                        <input formControlName="name" [class.invalid]="name?.invalid && (name?.dirty || name?.touched)" class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
                             type="text" placeholder="Nome">
                     </div>
 
