--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -52,8 +52,8 @@
 
       <!-- Textos e perfil -->
       <div class="d-none d-md-inline">
-        <span class="fw-bold">Ricardo Botega,</span> seja bem vindo!
-        <img class="rounded-circle ms-3 border border-primary" height="40" src="assets/sem-foto.jpg" alt="Perfil">
+        <span class="fw-bold">{{user.name}} {{user.surname}},</span> seja bem vindo!
+        <img class="rounded-circle ms-3 border border-primary" height="40" [src]="avatarImg" alt="Perfil">
       </div>
 
     </div>
