--- a/src/app/sistema/usuarios-sistema/editar-usuario-sistema/editar-usuario-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/editar-usuario-sistema/editar-usuario-sistema.component.html
@@ -71,15 +71,16 @@
           </div>
 
           <!-- Permissão -->
-          <div class="col-4 px-2 pt-4 p-0 m-0">
+          <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
             <select formControlName="permission"
               [class.invalid]="permission?.invalid && (permission?.dirty || permission?.touched)"
-              class="form-select form-select-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm text-custom-dark"
-              type="text" placeholder="Permissão">
+              class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+              placeholder="Permissão">
               <option value="-1" disabled selected>Permissão</option>
               <option value="0">Funcionário</option>
               <option value="1">Administrador</option>
             </select>
+            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Permissão</label>
           </div>
         </div>
 
