--- a/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
@@ -28,10 +28,8 @@
 
         <!-- Pesquisar -->
         <div class="col-4 px-2 p-0 m-0 position-relative">
-          <input class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
-          <a>
-            <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
-          </a>
+          <input (keyup)="filtrar($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
+          <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
         </div>
         
         <!-- Botão Filtro -->
