--- a/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
@@ -60,7 +60,7 @@
 
           <!-- RG -->
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-            <input mask="00.000.000-0||0.000.000-0" formControlName="rg"
+            <input [class.invalid]="rg?.invalid && (rg?.dirty || rg?.touched)" mask="00.000.000-0||0.000.000-0" formControlName="rg"
               class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
               placeholder="RG">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">RG</label>
@@ -84,7 +84,7 @@
 
           <!-- CNPJ -->
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-            <input mask="CPF_CNPJ" formControlName="cnpj"
+            <input [class.invalid]="cpf?.invalid && (cpf?.dirty || cpf?.touched)" mask="CPF_CNPJ" formControlName="cnpj"
               class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
               placeholder="CPF">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">CPF</label>
@@ -190,7 +190,7 @@
 
           <!-- CEP -->
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-            <input (blur)="changeAddress($event)" mask="00000-000" formControlName="cep"
+            <input [class.invalid]="cep?.invalid && (cep?.dirty || cep?.touched)" (blur)="changeAddress($event)" mask="00000-000" formControlName="cep"
               class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
               placeholder="CEP">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">CEP</label>
@@ -362,7 +362,7 @@
 
           <!-- MEI -->
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-            <input mask="CPF_CNPJ" formControlName="mei"
+            <input [class.invalid]="mei?.invalid && (mei?.dirty || mei?.touched)" mask="CPF_CNPJ" formControlName="mei"
               class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
               placeholder="CNPJ">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNPJ</label>
